# kopyt

./: LICENSE  README.md  setup.cfg
.github/workflows/: main.yml
kopyt/: debugger.py  exception.py  iterator.py  lexer.py  node.py  parser.py  position.py
tests/: __init__.py  test_iterator.py  test_lexer.py  test_node.py  test_parser.py  test_parser_argument.py  test_parser_assignment.py  test_parser_class.py  test_parser_expression.py  test_parser_function.py  test_parser_identifier.py  test_parser_if.py  test_parser_jump.py  test_parser_kotlin_file.py  test_parser_loop.py  test_parser_modifier.py  test_parser_object.py  test_parser_package.py  test_parser_primary_expression.py  test_parser_property.py  test_parser_script.py  test_parser_statement.py  test_parser_try.py  test_parser_type.py  test_parser_type_alias.py  test_parser_variable.py  test_parser_when.py
