[metadata]
name = kopyt
version = 0.0.1
author = Muhamad Visat
author_email = 9150540+mvisat@users.noreply.github.com
description = Kotlin parser in pure Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mvisat/kopyt
project_urls =
    Bug Tracker = https://github.com/mvisat/kopyt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers

[options]
packages = kopyt
python_requires = >=3.6
install_requires =
    dataclasses >= 0.8; python_version < "3.7"

# Coverage sections
[coverage:run]
source =
    kopyt

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:

[coverage:html]
skip_empty = True
